@@ -146,11 +146,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
      2.4.x patch: svn merge -c 1874323 ^/httpd/httpd/trunk .
      +1: ylavic, gsmith, rpluem
 
-  *) mod_proxy_hcheck: Allow %{Content-Type} to work in expressions
-     trunk patch: http://svn.apache.org/r1874616
-     2.4.x patch:  svn merge -c 1874616 ^/httpd/httpd/trunk .
-     +1: covener, ylavic, jim
-
   *) mod_http2: Fixes issue where mod_unique_id would generate non-unique request
      identifier under load, see <https://github.com/icing/mod_h2/issues/195>.
      trunk patch: http://svn.apache.org/r1874689
